# proyecto01labavanzado

./: README.md
proy01/: CMakeLists.txt  read_paa.cpp
proy01/include/: largs.hpp  paa.hpp
proy01/src/: largs.cpp  paa.cpp
